--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   "dependencies": {
     "@date-io/core": "^1.3.13",
     "@date-io/date-fns": "^1.3.13",
-    "@material-ui/core": "^4.11.0",
+    "@emotion/react": "11.4.1",
+    "@emotion/styled": "11.3.0",
+    "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "4.4.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/pickers": "^3.2.10",
@@ -35,6 +37,7 @@
     "cytoscape-dagre": "^2.3.0",
     "d3": "^5.15.1",
     "date-fns": "^2.16.1",
+    "framer-motion": "^4.1.17",
     "highlight": "^0.2.4",
     "highlight.js": "^9.18.3",
     "karma": "^5.2.2",
@@ -44,6 +47,7 @@
     "karma-junit-reporter": "^1.2.0",
     "markdown-to-jsx": "^6.11.4",
     "marked": "^1.1.1",
+    "motion": "6.0.0",
     "plotly.js": "^1.55.2",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -53,6 +57,10 @@
     "react-dom": "^16.13.1",
     "react-plotly.js": "^2.5.0",
     "react-transition-group": "^4.4.1",
+    "react-virtualized-auto-sizer": "1.0.6",
+    "react-vis": "1.11.7",
+    "react-visibility-sensor": "5.1.1",
+    "react-window": "1.8.6",
     "showdown": "^1.9.1",
     "utf-8-validate": "^5.0.2",
     "xlsx": "^0.15.5",
